# mt5-gateway

./: README.md
Gateway mt5 1/: CHANGELOG.md  LICENSE  README.md  Start-MT5-Flask-Gateway.cmd  app.py  env.example  pyproject.toml  requirements.txt
Gateway mt5 1/app/: __init__.py  config.py
Gateway mt5 1/app/api/: errors.py  routes.py  schemas.py
Gateway mt5 1/app/mt5/: __init__.py  account.py  mock.py  trading.py
Gateway mt5 1/app/security/: __init__.py  csrf.py  rate_limit.py
Gateway mt5 1/app/services/: __init__.py  logging.py  settings.py  stripe.py  telemetry.py
Gateway mt5 1/app/ui/: routes.py
Gateway mt5 1/app/ui/static/css/: custom.css
Gateway mt5 1/app/ui/static/js/: app.js
Gateway mt5 1/app/ui/templates/config/: index.html
Gateway mt5 1/app/ui/templates/dashboard/: index.html
Gateway mt5 1/app/ui/templates/license/: index.html
Gateway mt5 1/app/ui/templates/logs/: index.html
Gateway mt5 1/app/ui/templates/n8n/: index.html
Gateway mt5 1/installers/nsis/: mt5_flask_gateway.nsi
Gateway mt5 1/scripts/: build_exe.bat  create_shortcut.ps1  ensure_python.ps1  install_production.bat  make_installer.bat  run_app.bat  run_dev.bat
Gateway mt5 1/tests/unit/: test_core.py
